fix: text color secondary in dark mode

--- a/assets/scss/theme/_dark.scss
+++ b/assets/scss/theme/_dark.scss
@@ -1,6 +1,6 @@
 body.darkmode {
   --color-text-primary: #FFFFFF;
-  --color-text-secondary: #D1D5DB;
+  --color-text-secondary: #A2779B;
   --color-text-invert: #111827;
   --color-surface-primary: #410F39;
   --color-surface-secondary: #320B38;
